3_Kubernetes/lec_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app-deployment
spec:
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: rails-app-container
        image: registry.localhost:5000/rails-app:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
