3_Kubernetes/lec_1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rails-app-pod
  labels:
    app: rails-app
spec:
  containers:
    - name: rails-app-container
      image: registry.localhost:5000/rails-app:v1
      ports:
        - name: http-port
          containerPort: 3000
          protocol: TCP
