3_Kubernetes/lec_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-svc
spec:
  selector:
    app: rails-app
  ports:
  - port: 80
    targetPort: 3000
