3_Kubernetes/lec_1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rails-app-ing
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: railsapp.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: rails-app-svc
          servicePort: 80
